--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,6 +27,30 @@ html{
     scroll-behavior: smooth;
    
 }
+section{
+    padding:2rem 9%;
+}
+.heading{
+    text-align:center;
+    padding-bottom:2rem;
+    font-size:4.5rem;
+    color:var(--black);
+}
+.heading span{
+    position:relative;
+    z-index:0;
+}
+.heading span::before{
+    content:'';
+    position:absolute;
+    bottom:1rem;left:0;
+    height:100%;
+    width:100%;
+    z-index: -1;
+    background: var(--yellow);
+    clip-path:polygon(0 90%,100% 80%,100% 100%,0% 100%);
+}
+
 .btn{
     display:inline-block;
     margin-top:1rem;
@@ -174,10 +198,119 @@ html{
     color:var(--black);
     cursor:pointer;
 }
+.home{
+    padding-top:10rem;
+    text-align:center;
+    overflow-x:hidden;
+}
+.home h1{
+    font-size:7.5vw;
+    text-transform:uppercase;
+    color:var(--black);
+}
+.home img{
+    width:100%;
+    margin:1rem 0;
+}
+.icons-container{
+    padding-top:5rem;
+    padding-bottom:5rem;
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem,1fr));
+    gap:1.5rem;
+    background:#eee;
+}
+.icons-container .icon{
+    display:flex;
+    align-items:center;
+    gap:1.5rem;
+    padding:2rem;
+    background:#fff;
+    box-shadow:var(--box-shadow);
+    border-radius: .5rem;
+}
+.icons-container .icon i{
+    height:6rem;
+    width:6rem;
+    line-height: 6rem;
+    font-size: 2.5rem;
+    border-radius:50%;
+    background:#eee;
+    color:var(--black);
+    text-align:center;
 
+}
+.icons-container .icon .content h3{
+    color:var(--yellow);
+    font-size:2.5rem;
+}
+.icons-container .icon .content p{
+    color:var(--light-color);
+    font-size:1.5rem;
+}
+.icons-container .icon:hover{
+    background:var(--black);
 
+}
+.icons-container .icon:hover i{
+    color:var(--yellow);
+    
+}
+.icons-container .icon:hover .content h3 {
+    color:#fff;
+    
+}
 
+.vehicles .vehicles-slider{
+    padding-bottom: 5rem;
+}
+.vehicles .vehicles-slider .box{
+    text-align: center;
+   
+}
+.vehicles .vehicles-slider .box img{
+    width:100%;
+    /*
+    opacity:0.5;
+    transform:scale(.8);
+    */
+}
+.vehicles .vehicles-slider .box .content{
+    /*transform:scale(0);*/
+    padding-top:1rem;
+}
 
+.vehicles .vehicles-slider .box .content h3{
+    font-size:2rem;
+    color:var(--black);
+}
+.vehicles .vehicles-slider .box .content .price{
+    font-size:2.5rem;
+    color:var(--yellow);
+    padding:1rem 0;
+    font-weight:bolder;
+}
+
+.vehicles .vehicles-slider .box .content .price span{
+    font-size:1.5rem;
+    color:var(--light-color);
+    padding:1rem 0;
+    font-weight:bolder;
+} 
+
+.vehicles .vehicles-slider .box .content p{
+    font-size: 1.5rem;
+    padding:1rem;
+    padding-top:1.5rem;
+    border-top:var(--border);
+    color:var(--light-color);
+}
+.vehicles .vehicles-slider .box .content p span{
+    color:var(--yellow);
+    font-size: 0.8rem;
+    padding:0 0.5rem;
+
+}
 /*media quiries*/
 
 @media(max-width:991px){
@@ -190,6 +323,9 @@ html{
     }
     .header.active{
         
+        padding:2rem;
+    }
+    section{
         padding:2rem;
     }
 }
