--- a/CSS/style.css
+++ b/CSS/style.css
@@ -324,7 +324,139 @@ section{
     background:var(--yellow);
 }
 
+.services .box-container{
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem,1fr));
+    gap:1.5rem;
+}
 
+.services .box-container .box{
+    text-align:center;
+    padding:2rem;
+    border-radius:0.5rem;
+    box-shadow:var(--box-shadow);
+    border:var(--border);
+}
+
+.services .box-container .box i{
+    height:6rem;
+    width:6rem;
+    line-height:6rem;
+    font-size:2.5rem;
+    color:var(--black);
+    background:var(--yellow);
+    border-radius: 50%;
+    margin:1rem;
+}
+.services .box-container .box h3{
+    color:var(--black);
+    font-size:2.2rem;
+
+}
+.services .box-container .box p{
+    color:var(--light-color);
+    font-size:1.4rem;
+    padding:1rem 0;
+    line-height:1.8;
+}
+.services .box-container .box:hover {
+    background: var(--black);
+}
+.services .box-container .box:hover h3{
+    color:#fff;
+}
+.services .box-container .box:hover p{
+    color:#eee;
+}
+
+.featured .featured-slider { 
+    padding:1rem;
+    padding-bottom:4rem;
+}
+.featured .featured-slider .box{
+    text-align:center;
+    padding:2rem;
+    box-shadow: var(--box-shadow);
+    border:var(--border);
+    border-radius: .5rem;
+}
+.featured .featured-slider .box img{
+    height:15rem;
+}
+.featured .featured-slider .box:hover img{
+    transform:scale(0.9);
+
+}
+
+.featured .featured-slider .box h3{
+    font-size:2.2rem;
+    color:var(--black);
+}
+.featured .featured-slider .box .stars{
+    padding:1rem 0;
+}
+.featured .featured-slider .box .stars i{
+    font-size:1.7rem;
+    color:var(--yellow);
+}
+.featured .featured-slider .box .price{
+    font-size: 2.5rem;
+    color:var(--black);
+}
+
+.newsletter{
+    padding:6rem 2rem;
+    text-align:center;
+    background:url(../image/letter-bg.png) no-repeat;
+    background-position: center;
+    background-size:cover;
+}
+
+.newsletter h3{
+    color:var(--black);
+    font-size:3rem;
+}
+
+.newsletter p{
+    color:var(--light-color);
+    font-size:1.5rem;
+    padding:1rem 0;
+}
+
+input[type="email"], input[type="submit"] {
+    margin:1rem auto;
+    max-width:60rem;
+    height:5rem;
+    display:flex;
+    text-align:center;
+    overflow:hidden;
+    border-radius:5rem;
+
+}
+
+input[type="email"]{
+    height:100%;
+  
+    font-size:1.6rem;
+    color:var(--black);
+    text-transform: none;
+    padding:0 2rem;
+}
+input[type="submit"]{
+    height:100%;
+    width:10%;
+    font-size:1.6rem;
+    text-align:center;
+    align-items: center;
+    padding:1rem;
+    color:var(--black);
+    background:var(--yellow);
+    cursor:pointer;
+}
+
+.newsletter form input[type="submit"]:hover{
+    background: var(--light-yellow);
+}
 
 /*media quiries*/
 
